fixed the layout issue for the form

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 16px;
-  background-image: url(../../images/bg-intro-mobile.png);
+  background-image: url(../images/bg-intro-mobile.png);
   background-color: hsl(0, 100%, 74%);
 }
 
@@ -106,7 +106,6 @@ a .bold {
 
 form {
   width: 327px;
-  height: 442px;
   background-color: #FFFFFF;
   border-radius: 10px;
   display: flex;
@@ -131,9 +130,13 @@ form .tos p span {
   color: hsl(0, 100%, 74%);
   font-weight: 600;
 }
+form .input-container {
+  margin: 0 auto;
+  height: 78px;
+}
 form input {
   display: block;
-  margin: 16px 0;
+  margin: 16px 0 0 0;
   height: 56px;
   width: 279px;
   border-radius: 5px;
@@ -188,6 +191,7 @@ form :-ms-input-placeholder { /* Internet Explorer 10+ */
   border: none;
   border-radius: 5px;
   box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.0908818);
+  margin-top: 30px;
 }
 
 .error {
@@ -206,6 +210,8 @@ form :-ms-input-placeholder { /* Internet Explorer 10+ */
   text-align: right;
   color: hsl(0, 100%, 74%);
   margin-right: 2px;
+  margin-top: 6px;
+  margin-bottom: 20px;
 }
 
 .intro {
@@ -226,9 +232,9 @@ h1 {
   line-height: 36px;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1224px) {
   body {
-    background-image: url(../../images/bg-intro-desktop.png);
+    background-image: url(../images/bg-intro-desktop.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
