--- a/scss/components/_basic-stylings.scss
+++ b/scss/components/_basic-stylings.scss
@@ -8,7 +8,7 @@ body {
     font-family: $font-poppins;
     font-weight: $font-regular;
     font-size: $font-body;
-    background-image: url(../../images/bg-intro-mobile.png); 
+    background-image: url(../images/bg-intro-mobile.png); 
     background-color: $red;
 }
 
