--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -27,7 +27,7 @@ a {
 
 form {
     width: 327px;
-    height: 442px;
+
     background-color: $white;
     border-radius: 10px;
     display: flex;
@@ -58,12 +58,18 @@ form {
         }
     }
     
+    .input-container {
+        margin: 0 auto;
+        height: 78px;
+
+
+    }
 
     input {
         display: block;
-        margin: 16px 0;
+        margin: 16px 0 0 0;
         height: 56px;
-width: 279px;
+        width: 279px;
         border-radius: 5px;
         border: 1px solid #DEDEDE;
         padding: 15px 19px;
@@ -111,6 +117,9 @@ width: 279px;
 .submit-btn {
     height: 56px;
     width: 279px;
+
+
+
     background-color: $green;
     font-weight: $font-semibold;
     font-size: 15px;
@@ -122,6 +131,7 @@ width: 279px;
     border: none;
     border-radius: 5px;
     box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.0908818);
+    margin-top: 30px;
 }
 
 
@@ -130,7 +140,10 @@ width: 279px;
     background-image: url('../images/icon-error.svg');
     background-repeat: no-repeat;
     background-position: right 5% bottom 50%;
+    
+  
 }
+
 
 .text {
     display: block;
@@ -141,4 +154,6 @@ width: 279px;
     text-align: right;
     color: $red;
     margin-right: 2px;
+    margin-top: 6px;
+    margin-bottom: 20px;
 }
