--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -1,6 +1,6 @@
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1224px) {
     body {
-        background-image: url(../../images/bg-intro-desktop.png); 
+        background-image: url(../images/bg-intro-desktop.png); 
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
